--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://192.168.5.173:3306/login
+spring.datasource.url = jdbc:mysql://login.cxq0zpu1buxq.us-east-1.rds.amazonaws.com:3306/login
 spring.datasource.username = root
 spring.datasource.password = password
 
