--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+    
+    <build>
+        <plugins>
+            <plugin>
     <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
     <version>0.8.6-SNAPSHOT</version>
@@ -103,7 +110,7 @@
             </configuration>
         </execution>
     </executions>
-</plugin>    
-        </plugins>
-    </build>
+</plugin>
+            </plugins>
+        </build>
 </project>
