--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
             <plugin>
           <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
-          <version>0.8.6-SNAPSHOT</version>
+          <version>3.6.0.1398</version>
         </plugin>
         <plugin>
 		<groupId>org.jacoco</groupId>
