--- a/pom.xml
+++ b/pom.xml
@@ -97,4 +97,10 @@
 	</plugin>
         </plugins>
     </build>
+	<properties>
+  <sonar.projectKey>login-spring</sonar.projectKey>
+  <sonar.organization>login</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  <sonar.login>e4e948fdeac1d2e36f1d3a2846bb32d5de7e1f64</sonar.login>
+</properties>
 </project>
