--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,24 @@
         <version>2.0.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+	
+	<repositories>
+    <repository>
+      <id>maven-group</id>
+      <url>http://ec2-52-207-239-217.compute-1.amazonaws.com:8081/repository/maven-group/</url>
+    </repository>
+  </repositories>
+	
+	<distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://ec2-52-207-239-217.compute-1.amazonaws.com:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>nexus-releases</id>
+      <url>http://ec2-52-207-239-217.compute-1.amazonaws.com:8081/repository/maven-releases/</url>
+    </repository>
+  </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
